Đổ data ảo lên gridview trong Home fragment

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,5 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <GridView
+        android:id="@+id/gridView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
+        android:columnWidth="100dp"
+        android:elevation="0dp"
+        android:gravity="center_vertical"
+        android:horizontalSpacing="1dp"
+        android:numColumns="2"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="none"
+        android:verticalSpacing="1dp" />
 
 </LinearLayout>
