--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="colorGrey1">#B2BABB</color>
     <color name="colorGreyTextHint">#808080</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="colorRed1">#E74C3C</color>
 </resources>
