--- a/app/src/main/res/layout/activity_sell.xml
+++ b/app/src/main/res/layout/activity_sell.xml
@@ -22,12 +22,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:fontFamily="@font/lato"
             android:gravity="center"
             android:text="Đăng bán"
-            android:fontFamily="@font/lato"
             android:textColor="@color/colorWhite"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:fontFamily="@font/lato" />
 
     </androidx.appcompat.widget.Toolbar>
 
